@@ -2,9 +2,9 @@
 	Copyright (C) 2009  EPFL (Ecole Polytechnique Fédérale de Lausanne)
 	Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>
 
-    This file is part of the act2demux library
+    This file is part of the lpttrigger library
 
-    The act2demux library is free software: you can redistribute it and/or
+    The lpttrigger library is free software: you can redistribute it and/or
     modify it under the terms of the version 3 of the GNU General Public
     License as published by the Free Software Foundation.
 
