@@ -1,3 +1,21 @@
+/*
+	Copyright (C) 2009  EPFL (Ecole Polytechnique Fédérale de Lausanne)
+	Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>
+
+    This file is part of the lpttrigger library
+
+    The lpttrigger library is free software: you can redistribute it and/or
+    modify it under the terms of the version 3 of the GNU General Public
+    License as published by the Free Software Foundation.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
 /** \internal
  * \file lpttrigger.c
  * \author Nicolas Bourdaud
@@ -12,12 +30,19 @@
 # include <config.h>
 #endif
 
-
-#include "lpttrigger.h"
-#include "lptwriter.h"
+#include <time.h>
 #include <pthread.h>
 #include <errno.h>
 #include <stdlib.h>
+
+#if !HAVE_CLOCK_GETTIME
+# include <clock_gettime.h>
+#endif
+
+
+
+#include "lpttrigger.h"
+#include "lptwriter.h"
 
 #define STOP_THREAD	1
 #define RESTART_TIMER	2
